--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>tic. - {% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="/static/screen.css" type="text/css" media="screen, projection">
+        <link rel="stylesheet" href="/static/print.css" type="text/css" media="print">    
+        <!--[if IE]><link rel="stylesheet" href="/static/ie.css" type="text/css" media="screen, projection"><![endif]-->
         <script src="http://www.google.com/jsapi"></script>
         <script>
            google.load("jquery", "1");
@@ -10,6 +13,8 @@
         {% block head %}{% endblock %}
     </head>
     <body>
+        <div class="container">
         {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
