--- a/templates/index.html
+++ b/templates/index.html
@@ -2,29 +2,51 @@
 {% block title %}Home{% endblock %}
 {% block head %}
 <script type="text/javascript">
-    $(document).ready(function() {
-            $('#add_activity').ajaxForm({
-                "resetForm":true,
-                "dataType":"json",
-                "success": function(response) {
-                    if(response.success) {
-                        $('#active').prepend($(response.activity));
-                    } else {
-                        alert(response.reason);
-                    }
-                }});
-
-            $('tr a[href="/delete"]').click(function() {
-                id = $(this).parent().parent().attr("id");
-                $.post("/delete", {"key":id}, function(response) {
-                    if(response.success) {
-                       $("#" + id).fadeOut("normal");
+    function addActivity(response, group) {
+        newRow = $(response.activity);
+        addRowLinkListeners(newRow, group);
+        $("#" + group).prepend($(newRow));
+    }
+    function addRowLinkListener(activityRow, link, callback) {
+        $('a[href="'+ link + '"]', activityRow).click(function() {
+                $.post(link, {"key":activityRow.attr("id")}, function(response) {
+                    if (response.success) {
+                        callback(response);
                     } else {
                        alert(response.reason);
                     }
                     }, "json");
                 return false;
                 });
+    }
+    function addRowLinkListeners(activityRow, group) {
+        addRowLinkListener(activityRow, "/delete", function() { activityRow.remove(); });
+        if (group == "active") {
+            addRowLinkListener(activityRow, "/stop",
+                    function(response) { 
+                        activityRow.remove();
+                        addActivity(response, "inactive");
+                    });
+        } else {
+            addRowLinkListener(activityRow, "/restart",
+                    function(response) { activityRow.remove(); addActivity(response, "active"); });
+            addRowLinkListener(activityRow, "/again",
+                    function(response) { addActivity(response, "active"); });
+        }
+    }
+    $(document).ready(function() {
+            $('#add_activity').ajaxForm({
+                "resetForm":true,
+                "dataType":"json",
+                "success": function(response) {
+                    if(response.success) {
+                        addActivity(response, "active");
+                    } else {
+                        alert(response.reason);
+                    }
+                }});
+            $("#active tr").each(function() { addRowLinkListeners($(this), "active"); });
+            $("#inactive tr").each(function() { addRowLinkListeners($(this), "inactive"); });
             });
 </script>
 {% endblock %}
@@ -33,8 +55,13 @@
     <input type="text" name="name" />
     <input type="submit" value="Start" />
 </form>
-<table id="active" class="span-16">
+<table id="active" class="span-16 last">
 {% for activity in activities %}
+{% include "activity.html" %}
+{% endfor %}
+</table>
+<table id="inactive" class="span-16 last">
+{% for activity in inactivities %}
 {% include "activity.html" %}
 {% endfor %}
 </table>
