--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
            google.load("jquery", "1");
         </script>
         <script type="text/javascript" src="/static/jquery.form.min.js"></script> 
+        <script type="text/javascript" src="/static/tic.js"></script> 
         {% block head %}{% endblock %}
     </head>
     <body>
