--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,6 +1,6 @@
 <tr id="{{ activity.key }}">
     <td>{{ activity.name }}</td> 
-    <td>{{ activity.start|date:"G:i, M j" }}</td>
+    <td>{{ activity.start|date:"Y/m/d H:i" }}</td>
     {% if activity.stop %}
     <td>{{ activity.duration }}</td>
     <td><a href="/restart">Restart</a></td>
