--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,11 @@
         <link rel="stylesheet" href="/static/screen.css" type="text/css" media="screen, projection">
         <link rel="stylesheet" href="/static/print.css" type="text/css" media="print">    
         <!--[if IE]><link rel="stylesheet" href="/static/ie.css" type="text/css" media="screen, projection"><![endif]-->
-        <script src="http://www.google.com/jsapi"></script>
-        <script>
-           google.load("jquery", "1");
-        </script>
+        <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script> 
         <script type="text/javascript" src="/static/jquery.form.min.js"></script> 
         <script type="text/javascript" src="/static/jquery.jeditable.min.js"></script> 
         <script type="text/javascript" src="/static/tic.js"></script> 
+        <link rel="icon" type="image/png" href="/static/tic.png" />
         {% block head %}{% endblock %}
     </head>
     <body>
