--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 </script>
 {% endblock %}
 {% block content %}
-<form id="add_activity" action="/add" method="post" class="span-8 last">
+<form id="add_activity" action="/activity/" method="post" class="span-8 last">
     <input type="text" name="name" />
     <input type="submit" value="Start" />
 </form>
