Add row listeners to all .activity elements

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,4 +1,4 @@
-<tr id="{{ activity.key }}">
+<tr id="{{ activity.key }}" class="activity">
     <td>{{ activity.name }}</td> 
     <td>{{ activity.localstart|date:"Y/m/d H:i" }}</td>
     {% if activity.stop %}
