--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script> 
         <script type="text/javascript" src="/static/jquery.form.min.js"></script> 
         <script type="text/javascript" src="/static/jquery.jeditable.min.js"></script> 
+        <script type="text/javascript" src="/static/jquery.autocomplete.min.js"></script> 
         <script type="text/javascript" src="/static/tic.js"></script> 
         <script type="text/javascript">
             $(document).ready(function() {
