Lump all the js libs I'm using into a single file.
cd static && cat jquery-1.2.6.min.js jquery.form.min.js jquery.jeditable.min.js jquery.autocomplete.min.js >> libs.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,7 @@
         <link rel="stylesheet" href="/static/screen.css" type="text/css" media="screen, projection">
         <link rel="stylesheet" href="/static/print.css" type="text/css" media="print">    
         <!--[if IE]><link rel="stylesheet" href="/static/ie.css" type="text/css" media="screen, projection"><![endif]-->
-        <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script> 
-        <script type="text/javascript" src="/static/jquery.form.min.js"></script> 
-        <script type="text/javascript" src="/static/jquery.jeditable.min.js"></script> 
-        <script type="text/javascript" src="/static/jquery.autocomplete.min.js"></script> 
+        <script type="text/javascript" src="/static/libs.js"></script> 
         <script type="text/javascript" src="/static/tic.js"></script> 
         <script type="text/javascript">
             $(document).ready(function() {
