--- a/templates/index.html
+++ b/templates/index.html
@@ -14,28 +14,34 @@
                     }
                 }});
 
-            function autocompleteCollector(selector, parser) {
+            function autocompleteCollector(toAutocomplete, parser, options) {
+                console.log("Creating autopcompleter", toAutocomplete, options || {});
+                var autocomplete = toAutocomplete.autocomplete([], options || {});
                 // There's probably a better way to make a list of uniques using Javascript, but
                 // this is all I'm coming up with
                 var names = {};
-                $(selector).each(function (){
-                    var bits = parser($(this).text());
+                var nameArr = []
+                return function(row) {
+                    var bits = parser(row);
                     for (i = 0; i < bits.length; i++) {
-                        names[bits[i]] = true;
+                        if (!names[bits[i]]) {
+                            names[bits[i]] = true;
+                            nameArr.push(bits[i]);
+                        }
                     }
-                });
-                var namearr = [];
-                for (name in names) {
-                    namearr.push(name);
-                }
-                return namearr;
+                    autocomplete.setOptions({data:nameArr});
+                };
             }
-            var nameCompletions = autocompleteCollector(".activity td:first-child",
-                    function(text) { return [text]; });
-            $("#add_activity input").eq(0).autocomplete(nameCompletions);
-            var tagCompletions = autocompleteCollector(".activity td:nth-child(2)",
-                    function(text) { return text.split(", "); });
-             $("#add_activity input").eq(1).autocomplete(tagCompletions);
+
+            rowAddListeners.push(autocompleteCollector($("#add_activity input").eq(0),
+                function(row) {
+                        return [$("td:first-child", row).text()];
+                 }));
+            rowAddListeners.push(autocompleteCollector($("#add_activity input").eq(1),
+                 function(row) {
+                        return $("td:nth-child(2)", row).text().split(", ");
+                 },
+                 {multiple:true}));
      });
 </script>
 {% endblock %}
